Archive2/45/b83d48af4e7f0b/output
main.cpp:1:34: warning: character constant too long for its type
 A first chance exception of type 'System.Deployment.Application.InvalidDeploymentException' occurred in System.Deployment.dll
                                  ^
main.cpp:2:34: warning: character constant too long for its type
 A first chance exception of type 'System.IO.DirectoryNotFoundException' occurred in mscorlib.dll
                                  ^
main.cpp:3:34: warning: character constant too long for its type
 A first chance exception of type 'System.IO.DirectoryNotFoundException' occurred in PresentationCore.dll
                                  ^
main.cpp:4:34: warning: character constant too long for its type
 A first chance exception of type 'System.Xaml.XamlObjectWriterException' occurred in System.Xaml.dll
                                  ^
main.cpp:5:34: warning: character constant too long for its type
 A first chance exception of type 'System.Windows.Markup.XamlParseException' occurred in PresentationFramework.dll
                                  ^
main.cpp:6:42: warning: character constant too long for its type
 Additional information: Provide value on 'System.Windows.Baml2006.TypeConverterMarkupExtension' threw an exception.
                                          ^
main.cpp:1:1: error: 'A' does not name a type
 A first chance exception of type 'System.Deployment.Application.InvalidDeploymentException' occurred in System.Deployment.dll
 ^
